Fix label being covered

--- a/src/ui/dialog/import/style.scss
+++ b/src/ui/dialog/import/style.scss
@@ -5,6 +5,9 @@
 @include textfield.core-styles;
 
 .import-dialog {
+    .mdc-dialog__content > :first-child.mdc-text-field {
+        margin-top: 8px;
+    }
     textarea {
         font-family: monospace;
         line-height: 1rem !important;
