--- a/src/ui/dialog/style.scss
+++ b/src/ui/dialog/style.scss
@@ -3,6 +3,7 @@
 @use '@material/typography/mdc-typography';
 
 @include dialog.core-styles;
+@include button.core-styles;
 
 .mdc-dialog-content-block {
     padding: 0px 8px;
